--- a/.eslintrc
+++ b/.eslintrc
@@ -24,5 +24,14 @@
     "import/prefer-default-export": 0,
     "no-param-reassign": 0,
     "new-cap": 0
-  }
+  },
+  "overrides": [
+    {
+      "files": ["*.dto.ts"],
+      "rules": {
+        "eslint-disable max-classes-per-file": 0,
+        "max-classes-per-file": 0
+      }
+    }
+  ],
 }
