--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "cache-manager-redis-store": "^2.0.0",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "eslint-config-airbnb-typescript": "^12.0.0",
     "lodash": "^4.17.20",
